@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.981 2003/04/22 08:58:33 mauriliolongo Exp $
+ * $Id: ChangeLog,v 1.982 2003/04/22 13:46:00 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-04-22 15:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    ! Removed logic of "eating" '\' in strotrim() and replaced with adding '\' as '[' prefix.
 
 2003-04-22 16:00 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * include/hbrpc.ch
@@ -52,7 +56,6 @@
   NOTE: With these changes the single threaded xHarbour can be built on OS/2 using EMX GCC
         If a compiled program wants to use xHarbour socket support it has to be linked
         with -lsocket to add socket library to resulting .exe file
-
 
 2003-04-22 01:21 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/trpccli.prg
